--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!--  lemonade colors   -->
+    <color name="yellow_primary">#ffee58</color>
+    <color name="yellow_dark">#FFD600</color>
 </resources>
