--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,14 @@
 <!--  lemonade colors   -->
     <color name="yellow_primary">#ffee58</color>
     <color name="yellow_dark">#FFD600</color>
+
+
+<!--  Tips Calculator colors  -->
+    <color name="green">#1B5E20</color>
+    <color name="green_dark">#003300</color>
+    <color name="green_light">#A5D6A7</color>
+    <color name="blue">#0288D1</color>
+    <color name="blue_dark">#005B9F</color>
+    <color name="blue_light">#81D4FA</color>
+
 </resources>
