U3P1 - Dessert Clicker - Activity Lifecycles exploration

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="blue_dark">#005B9F</color>
     <color name="blue_light">#81D4FA</color>
 
+<!-- Desserts Clicking App -->
+    <color name="grey">#99000000</color>
 </resources>
