--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-<!--  lemonade colors   -->
+    <!--  lemonade colors   -->
     <color name="yellow_primary">#ffee58</color>
     <color name="yellow_dark">#FFD600</color>
 
 
-<!--  Tips Calculator colors  -->
+    <!--  Tips Calculator colors  -->
     <color name="green">#1B5E20</color>
     <color name="green_dark">#003300</color>
     <color name="green_light">#A5D6A7</color>
@@ -21,6 +21,10 @@
     <color name="blue_dark">#005B9F</color>
     <color name="blue_light">#81D4FA</color>
 
-<!-- Desserts Clicking App -->
+    <!-- Desserts Clicking App -->
     <color name="grey">#99000000</color>
+
+    <!--  Unscramble  -->
+    <color name="red_700">#FFD32F2F</color>
+    <color name="red_400">#FFEF5350</color>
 </resources>
