--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="medium_text_size">20sp</dimen>
     <dimen name="large_text_size">33sp</dimen>
     <dimen name="corner_radius">4dp</dimen>
+
+<!-- Unscramble dimens   -->
+    <dimen name="default_padding">16dp</dimen>
+    <dimen name="default_margin">32dp</dimen>
 </resources>
