--- a/app/src/main/res/layout/unscramble_game_fragment.xml
+++ b/app/src/main/res/layout/unscramble_game_fragment.xml
@@ -14,9 +14,20 @@
   ~ limitations under the License.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="gameViewModel"
+            type="com.gamesofni.kotlinTutorials.unscramble.ui.game.GameViewModel" />
+        <variable
+            name="maxNoOfWords"
+            type="int" />
+    </data>
+
+    <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -61,6 +72,8 @@
 
         <TextView
             android:id="@+id/textView_unscrambled_word"
+            android:text="@{gameViewModel.currentScrambledWord}"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
@@ -76,7 +89,7 @@
             android:id="@+id/word_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/word_count"
+            android:text="@{@string/word_count(gameViewModel.currentWordCount, maxNoOfWords)}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintBottom_toTopOf="@+id/textView_unscrambled_word"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +100,7 @@
             android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/score"
+            android:text="@{@string/score(gameViewModel.score)}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintEnd_toEndOf="parent"
@@ -118,3 +131,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
+
+</layout>
