--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,12 @@
     <!--  Unscramble  -->
     <color name="red_700">#FFD32F2F</color>
     <color name="red_400">#FFEF5350</color>
+
+    <!-- Cupcake colors   -->
+    <color name="pink_400">#FFEC407A</color>
+    <color name="pink_600">#FFD81B60</color>
+    <color name="pink_950">#FFB31650</color>
+    <color name="purple_400">#FFAB47BC</color>
+<!--    <color name="purple_700">#FF7B1FA2</color>-->
+
 </resources>
