--- a/app/src/main/res/layout/cupcake_fragment_flavor.xml
+++ b/app/src/main/res/layout/cupcake_fragment_flavor.xml
@@ -20,6 +20,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".cupcake.FlavorFragment">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.gamesofni.kotlinTutorials.cupcake.model.OrderViewModel" />
+
+<!-- for onClick Listener -->
+        <variable
+            name="flavorFragment"
+            type="com.gamesofni.kotlinTutorials.cupcake.FlavorFragment" />
+
+    </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -39,30 +51,40 @@
 
                 <RadioButton
                     android:id="@+id/vanilla"
+                    android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
+                    android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/vanilla" />
 
                 <RadioButton
                     android:id="@+id/chocolate"
+                    android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
+                    android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/chocolate" />
 
                 <RadioButton
                     android:id="@+id/red_velvet"
+                    android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
+                    android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/red_velvet" />
 
                 <RadioButton
                     android:id="@+id/salted_caramel"
+                    android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
+                    android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/salted_caramel" />
 
                 <RadioButton
                     android:id="@+id/coffee"
+                    android:checked="@{viewModel.flavor.equals(@string/coffee)}"
+                    android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/coffee" />
@@ -80,6 +102,8 @@
 
             <TextView
                 android:id="@+id/subtotal"
+                android:text="@{@string/subtotal_price(viewModel.price)}"
+
                 style="@style/Widget.Cupcake.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -89,14 +113,27 @@
                 tools:text="Subtotal $5.00" />
 
             <Button
+                android:id="@+id/cancel_button"
+                android:onClick="@{() -> flavorFragment.cancelOrder()}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/side_margin"
+                style="?attr/materialButtonOutlinedStyle"
+                android:text="@string/cancel"
+                app:layout_constraintEnd_toStartOf="@id/next_button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/next_button" />
+
+            <Button
                 android:id="@+id/next_button"
+                android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
                 android:text="@string/next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/cancel_button"
                 app:layout_constraintTop_toBottomOf="@id/subtotal" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
