--- a/app/src/main/res/navigation/cupcake_nav_graph.xml
+++ b/app/src/main/res/navigation/cupcake_nav_graph.xml
@@ -21,21 +21,54 @@
     <fragment
         android:id="@+id/startFragment"
         android:name="com.gamesofni.kotlinTutorials.cupcake.StartFragment"
-        android:label="fragment_start"
-        tools:layout="@layout/cupcake_fragment_start" />
+        android:label="@string/cupcake_app_name"
+        tools:layout="@layout/cupcake_fragment_start" >
+        <action
+            android:id="@+id/action_startFragment_to_flavorFragment"
+            app:destination="@id/flavorFragment" />
+    </fragment>
     <fragment
         android:id="@+id/flavorFragment"
         android:name="com.gamesofni.kotlinTutorials.cupcake.FlavorFragment"
-        android:label="fragment_flavor"
-        tools:layout="@layout/cupcake_fragment_flavor" />
+        android:label="@string/choose_flavor"
+        tools:layout="@layout/cupcake_fragment_flavor" >
+        <action
+            android:id="@+id/action_flavorFragment_to_pickupFragment"
+            app:destination="@id/pickupFragment" />
+        <!-- popUpTo ensures that when we hit cancel all intermediary fragments get popped  -->
+        <!-- popUpToInclusive ensure that there's only one StartFragment on the stack -->
+        <action
+            android:id="@+id/action_flavorFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true"
+        />
+    </fragment>
     <fragment
         android:id="@+id/pickupFragment"
         android:name="com.gamesofni.kotlinTutorials.cupcake.PickupFragment"
-        android:label="fragment_pickup"
-        tools:layout="@layout/cupcake_fragment_pickup" />
+        android:label="@string/choose_pickup_date"
+        tools:layout="@layout/cupcake_fragment_pickup" >
+        <action
+            android:id="@+id/action_pickupFragment_to_summaryFragment"
+            app:destination="@id/summaryFragment" />
+        <action
+            android:id="@+id/action_pickupFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true"
+            />
+    </fragment>
     <fragment
         android:id="@+id/summaryFragment"
         android:name="com.gamesofni.kotlinTutorials.cupcake.SummaryFragment"
-        android:label="fragment_summary"
-        tools:layout="@layout/cupcake_fragment_summary" />
+        android:label="@string/order_summary"
+        tools:layout="@layout/cupcake_fragment_summary" >
+        <action
+            android:id="@+id/action_summaryFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true"
+        />
+    </fragment>
 </navigation>
