--- a/app/src/main/res/layout/marsphotos_grid_view_item.xml
+++ b/app/src/main/res/layout/marsphotos_grid_view_item.xml
@@ -22,8 +22,8 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.gamesofni.kotlinTutorials.marsphotos.overview.OverviewViewModel" />
+            name="photo"
+            type="com.gamesofni.kotlinTutorials.marsphotos.network.MarsPhoto" />
     </data>
 
     <ImageView
@@ -34,6 +34,6 @@
         android:adjustViewBounds="true"
         android:padding="2dp"
         tools:src="@tools:sample/backgrounds/scenic"
-        app:imageUrl="@{viewModel.photos.imgSrcUrl}"
+        app:imageUrl="@{photo.imgSrcUrl}"
     />
 </layout>
