--- a/app/src/main/res/layout/marsphotos_grid_view_item.xml
+++ b/app/src/main/res/layout/marsphotos_grid_view_item.xml
@@ -22,18 +22,38 @@
 
     <data>
         <variable
-            name="photo"
-            type="com.gamesofni.kotlinTutorials.marsphotos.network.MarsPhoto" />
-    </data>
+            name="property"
+            type="com.gamesofni.kotlinTutorials.marsphotos.network.MarsProperty" />
+        <!-- Use imports to use a components of a class inside a databinding expression  -->
+        <!-- For example here we need an access to the View class to use View.GONE / View.VISIBLE
+         -->
+        <import type="android.view.View" />
 
-    <ImageView
-        android:id="@+id/mars_image"
-        android:layout_width="wrap_content"
+    </data>
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:padding="2dp"
-        tools:src="@tools:sample/backgrounds/scenic"
-        app:imageUrl="@{photo.imgSrcUrl}"
-    />
+    >
+        <ImageView
+            android:id="@+id/mars_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:padding="2dp"
+            tools:src="@tools:sample/backgrounds/scenic"
+            app:imageUrl="@{property.imgSrcUrl}"
+        />
+        <ImageView
+            android:id="@+id/mars_property_type"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="bottom|end"
+            android:adjustViewBounds="true"
+            android:padding="5dp"
+            android:scaleType="fitCenter"
+            android:visibility="@{property.rental ? View.GONE : View.VISIBLE}"
+            android:src="@drawable/ic_for_sale_outline"
+            tools:src="@drawable/ic_for_sale_outline"/>
+    </FrameLayout>
 </layout>
