--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-<!--  Dessert Clicker dimensions  -->
+    <!--  Dessert Clicker dimensions  -->
     <dimen name="default_spacing">16dp</dimen>
     <dimen name="button_width">150dp</dimen>
     <dimen name="button_height">150dp</dimen>
@@ -9,16 +9,22 @@
     <dimen name="large_text_size">33sp</dimen>
     <dimen name="corner_radius">4dp</dimen>
 
-<!-- Unscramble dimens   -->
+    <!-- Unscramble dimens   -->
     <dimen name="default_padding">16dp</dimen>
     <dimen name="default_margin">32dp</dimen>
 
 
-<!-- Cupcake App   -->
+    <!-- Cupcake App   -->
     <dimen name="image_size">300dp</dimen>
     <dimen name="order_cupcake_button_width">250dp</dimen>
     <dimen name="side_margin">16dp</dimen>
     <dimen name="margin_between_elements">8dp</dimen>
     <dimen name="radio_button_padding">8dp</dimen>
     <dimen name="order_summary_margin">4dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="appbar_padding">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
